--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
-			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="https://github.com/rajbos">github.com/rajbos</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+		
+		{% include head.html %}
+	
+	<body>
+		<div class="container">
+		
+		<nav>
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="/blog">Blog</a></li>
+		</ul>
+		</nav>
+		<div class="container">
+
+		{{ content }}
+
+		</div><!-- /.container -->
+		<footer>
+			<ul>
+				<li><a href="https://github.com/rajbos">github.com/rajbos</a></li>
+			</ul>
+		</footer>
+	</body>
+		
+		{% include analytics.html %}
+</html>
