--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,14 @@
 		{% include head.html %}
 	
 	<body>
-		<div class="container">
 		
-		<nav>
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/blog">Blog</a></li>
-		</ul>
+		<nav class=navbar navbar-expand-lg navbar-light bg-light>
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/blog">Blog</a></li>
+			</ul>
 		</nav>
+		
 		<div class="container">
 
 		{{ content }}
