--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,10 @@
 	<body>
 		
 		<nav class=navbar navbar-expand-lg navbar-light bg-light>
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/blog">Blog</a></li>
-			</ul>
+			<li class="nav-item">
+        			<a class="nav-link" href="/">Home</a>
+        			<a class="nav-link" href="/blog">Blog</a>
+      			</li>			
 		</nav>
 		
 		<div class="container">
