--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,13 @@
 	<body>
 		
 		<nav class=navbar navbar-expand-lg navbar-light bg-light>
-			<li class="nav-item">
-        			<a class="nav-link" href="/">Home</a>
-        			<a class="nav-link" href="/blog">Blog</a>
-      			</li>			
+			<ul class="navbar-nav mr-auto">
+    
+				<li class="nav-item">
+					<a class="nav-link" href="/">Home</a>
+					<a class="nav-link" href="/blog">Blog</a>
+				</li>			
+			</ul>
 		</nav>
 		
 		<div class="container">
