--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,14 @@
 	
 	<body>
 		
-		<nav class=navbar navbar-expand-lg navbar-light bg-light>
-			<ul class="navbar-nav mr-auto">
-    
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<ul class="navbar-nav mr-auto">    
 				<li class="nav-item">
 					<a class="nav-link" href="/">Home</a>
-					<a class="nav-link" href="/blog">Blog</a>
 				</li>			
+				<li class="nav-item">
+					<a class="nav-link" href="/blog">Blog</a>
+				</li>
 			</ul>
 		</nav>
 		
@@ -27,5 +28,5 @@
 		</footer>
 	</body>
 		
-		{% include analytics.html %}
+	{% include analytics.html %}
 </html>
