--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,16 @@
 		{% include head.html %}
 	
 	<body>
-		
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<ul class="navbar-nav mr-auto">    
-				<li class="nav-item">
-					<a class="nav-link" href="/">Home</a>
-				</li>			
-				<li class="nav-item">
-					<a class="nav-link" href="/blog">Blog</a>
-				</li>
-			</ul>
+		  <a class="navbar-brand" href="#">Home</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		    <div class="navbar-nav">
+		      <a class="nav-item nav-link" href="/blog">Blog</a>
+		    </div>
+		  </div>
 		</nav>
 		
 		<div class="container">
