--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,19 @@
 		{% include head.html %}
 	
 	<body>
+		
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		  <a class="navbar-brand" href="#">Home</a>
-	      	  <a class="nav-item nav-link" href="/blog">Blog</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarText">
+		    <ul class="navbar-nav mr-auto">		      
+		      <li class="nav-item">
+			<a class="nav-link" href="/blog/">Blog</a>
+		      </li>
+		    </ul>
+		  </div>
 		</nav>
 		
 		<div class="container">
