--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,9 @@
 		{{ content }}
 
 		</div><!-- /.container -->
-		<footer>
-			<ul>
-				<li><a href="https://github.com/rajbos">github.com/rajbos</a></li>
-			</ul>
-		</footer>
+		<footer class="footer">			
+			<li><a href="https://github.com/rajbos">github.com/rajbos</a></li>			
+		</footer><!-- /.footer -->
 	</body>
 		
 	{% include analytics.html %}
