--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,17 +6,7 @@
 	<body>
 		
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="#">Home</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarText">
-		    <ul class="navbar-nav mr-auto">		      
-		      <li class="nav-item">
-			<a class="nav-link" href="/blog/">Blog</a>
-		      </li>
-		    </ul>
-		  </div>
+		  <a class="navbar-brand" href="#">Home</a>		  
 		</nav>
 		
 		<div class="container">
@@ -25,7 +15,7 @@
 
 		</div><!-- /.container -->
 		<footer class="footer">			
-			<li><a href="https://github.com/rajbos">github.com/rajbos</a></li>			
+			<a href="https://github.com/rajbos">github.com/rajbos</a>		
 		</footer><!-- /.footer -->
 	</body>
 		
