--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 	<body>
 		
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="#">Home</a>		  
+		  <a class="navbar-brand" href="/">Home</a>		  
 		</nav>
 		
 		<div class="container">
@@ -14,7 +14,7 @@
 		{{ content }}
 
 		</div><!-- /.container -->
-		<footer class="footer">			
+		<footer class="footer well-sm">			
 			<a href="https://github.com/rajbos">github.com/rajbos</a>		
 		</footer><!-- /.footer -->
 	</body>
