--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-Date posted: <p class="meta"><strong>{{ page.date | date_to_string }}</strong></p>
+<p class="meta">Date posted: <strong>{{ page.date | date_to_string }}</strong></p>
 
 <div class="post">
   {{ content }}
