--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,19 +5,34 @@
 	
 	<body>
 		
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="/">Home</a>		  
-		</nav>
+		<div class="container"> 
+			<nav class="navbar navbar-inverse">
+				<div class="container-fluid">
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand active" href="#">Robs blog</a>
+					</div>
+				
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="https://github.com/rajbos/">Github</a></li>                      
+					</ul>                    
+					</div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
+				</nav>
+			</div>
 		
 		<div class="container">
 
 		{{ content }}
 
-		</div><!-- /.container -->
-		<footer class="footer well-sm">			
-			<a href="https://github.com/rajbos">github.com/rajbos</a>		
-		</footer><!-- /.footer -->
 	</body>
-		
-	{% include analytics.html %}
+
 </html>
