--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="https://github.com/rajbos/">Github</a></li>                      
+						<li><a href="https://github.com/rajbos/">Github</a></li>   
+						<li><a href="https://github.com/rajbos/blog/atom.xml">RSS</a></li>                    
 					</ul>                    
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
