Fixed navigation links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,14 +16,14 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand active" href="#">Robs blog</a>
+					<a class="navbar-brand active" href="https://rajbos.github.io/">Robs blog</a>
 					</div>
 				
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li><a href="https://github.com/rajbos/">Github</a></li>   
-						<li><a href="https://github.com/rajbos/blog/atom.xml">RSS</a></li>                    
+						<li><a href="https://rajbos.github.io/blog/atom.xml">RSS</a></li>                    
 					</ul>                    
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
