ui updates main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,9 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="https://github.com/rajbos/">Github</a></li>   
-						<li><a href="{{ "/blog/atom.xml" | absolute_url }}">RSS</a></li>                    
+						<li><a href="https://github.com/rajbos/" target="_blank">Github</a></li>						
+						<li><a href="https://twitter.com/robbos81/" target="_blank">Twitter</a></li>   
+						<li><a href="{{ "/blog/atom.xml" | absolute_url }}" target="_blank">RSS</a></li>                    
 					</ul>                    
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
