--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
-}
-
 body{
     background-image: url(../images/20171229_01.jpg);
     background-origin: content-box;
@@ -14,4 +5,39 @@ body{
     background-attachment: fixed;
     background-position: center;    
     background-size: cover;   
+
+    padding-top:75px;
+}
+
+/* bootstrap navbar overrides */
+.navbar-inverse {
+    background-color: #4286f4; 
+    border-color: #4286f4;
+    border-radius: 0;
+}
+.navbar-inverse .navbar-brand {
+    color:white;
+}
+.navbar-inverse .navbar-brand:focus
+.navbar-inverse .navbar-brand:hover {
+    color: black;
+    background-color: transparent;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+  color: black;
+  background-color: transparent;
+}
+
+.navbar-inverse {
+    box-shadow: 0 2px 5px rgba(0,0,0,.26);
+}
+
+.panel-default>.panel-heading{
+    border-color: #4286f4;
 }
