Added hor. scrolling to the posts body to prevent images overflowing

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
     {{ page.title }}
   </div>
 
-  <div class="panel-body post">
+  <div class="panel-body post" style="overflow-x:scroll">
     {{ content }}
   </div>
 </div>
