--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand active" href="{{ "" | absolute_url }}">Robs blog</a>
 					</div>
@@ -23,7 +24,8 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li><a href="https://github.com/rajbos/" target="_blank">Github</a></li>						
-						<li><a href="https://twitter.com/robbos81/" target="_blank">Twitter</a></li>     
+						<li><a href="https://twitter.com/robbos81/" target="_blank">Twitter</a></li> 											
+						<li><a href="{{ "/blog/tools" | absolute_url }}" target="_blank">Tools</a></li>     
 						<li><a href="{{ "/blog/atom.xml" | absolute_url }}" target="_blank">RSS</a></li>
 						<li><a href="{{ "/blog/about" | absolute_url }}" target="_blank">About</a></li>                    
 					</ul>                    
