--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     <p class="meta">
       Date posted: <strong>{{ page.date | date_to_string }}</strong>
     </p>
-    {{ page.title }}
+    # {{ page.title }}
   </div>
 
   <div class="panel-body post" style="overflow-x:scroll">
