Converted the markdown tag to an H1 because the md tag was showing instead of rendering

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     <p class="meta">
       Date posted: <strong>{{ page.date | date_to_string }}</strong>
     </p>
-    # {{ page.title }}
+    <h1> {{ page.title }} </h1>
   </div>
 
   <div class="panel-body post" style="overflow-x:scroll">
