Added tweet button to posts footer

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,4 +13,8 @@ layout: default
   <div class="panel-body post" style="overflow-x:scroll">
     {{ content }}
   </div>
+
+  <div class="panel-footer">
+    <a class="twitter-share-button" href="https://twitter.com/intent/tweet" data-size="large">Tweet</a>
+  </div>
 </div>
