--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
 						<li><a href="https://twitter.com/robbos81/" target="_blank">Twitter</a></li> 											
 						<li><a href="{{ "/blog/tools" | absolute_url }}" target="_blank">Tools</a></li>     
 						<li><a href="{{ "/blog/atom.xml" | absolute_url }}" target="_blank">RSS</a></li>
-						<li><a href="{{ "/blog/about" | absolute_url }}" target="_blank">About</a></li>                    
+						<li><a href="{{ "/blog/about" | absolute_url }}" target="_blank">About</a></li>
+						<li><a href="https://mailchi.mp/a94a59145fe3/rajbos_github_io" target="_blank">Subscribe</a></li>
 					</ul>                    
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
