Added syntax css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
 	
 	<!-- styles -->
 	<link href="/css/style.css" rel="stylesheet">
+	<link href="/css/syntax.css" rel="stylesheet">
 	
 	<!-- google analytics -->
 	{% include analytics.html %}	
