--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="panel panel-default">
   <div class=panel-heading>
     <p class="meta">
-      Date posted: <strong>{{ page.date | date_to_string }}</strong>
+      Date posted: <strong>{{ page.date | date_to_string }}</strong>, {{ page.content | number_of_words | divided_by: 265 }} minutes to read
     </p>
     <h1> {{ page.title }} </h1>
   </div>
