--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: darkorange;
+    background-color: bisque;
     background-origin: content-box;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -40,7 +40,7 @@ body{
 }
 
 .panel-default>.panel-heading{
-    border-color: darkorange;
+    border-color: bisque;
     background-color: white;
 }
 
