--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -2,14 +2,13 @@
 layout: default
 title: Robs - Blog - Tags
 ---
-<h1>{{ page.title }}</h1>
-<ul class="posts">
 
-  {% for post in site.posts %}
-  
-    {% if post.visible==1 %}
-      <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-    {% endif %}
-  
+<h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
+<ul class="posts">
+  {% for post in page.posts %}
+    <li>
+      <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
+      <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+    </li>
   {% endfor %}
 </ul>
