--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,11 @@ layout: default
 
   <div class="panel-footer">
     <a class="twitter-share-button" rel="canonical" href="https://twitter.com/intent/tweet?screen_name=RobBos81" data-size="large">Tweet to @RobBos81</a>
+    
+    {% for tag in page.tags %}
+      <span class="post-date">{{ tag }}</span>
+      <a class="post-link" href="tag.url | prepend: site.baseurl">{{ tag.title }}</a>
+    {% endfor %}
   </div>
 </div>
 
