--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,7 @@ tr:nth-child(even) td { background: #F1F1F1; }
 
 /* Cells in odd rows (1,3,5...) are another (excludes header cells)  */        
 tr:nth-child(odd) td { background: #FEFEFE; }  
+
+.post-excerpt {
+    overflow-x: scroll;
+}
