--- a/css/style.css
+++ b/css/style.css
@@ -88,5 +88,5 @@ tr:nth-child(even) td { background: #F1F1F1; }
 tr:nth-child(odd) td { background: #FEFEFE; }  
 
 .post-excerpt {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
