--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,12 +15,15 @@ layout: default
   </div>
 
   <div class="panel-footer">
-    <a class="twitter-share-button" rel="canonical" href="https://twitter.com/intent/tweet?screen_name=RobBos81" data-size="large">Tweet to @RobBos81</a>
+    <span style="vertical-align:middle">
+      <a class="twitter-share-button" rel="canonical" href="https://twitter.com/intent/tweet?screen_name=RobBos81" data-size="large">Tweet to @RobBos81</a>
+    </span>
     
-    <span style="vertical-align:middle;"> Tags: 
+    <span style="vertical-align:middle"> 
+      Tags: 
       {% for tag in page.tags %}
         <span class="btn btn-default">
-            <a class="post-link" href="tag.url | prepend: site.baseurl">{{ tag }}</a>
+            <a class="post-link" href="{{ tag.url | prepend: site.baseurl }}">{{ tag }}</a>
         </span>
       {% endfor %}
     </span>
