Fixing twitter button layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+<style>
+  .twitter-widget-0 {
+    vertical-align: middle;
+  }
+</style>
 
 <div class="panel panel-default">
   <div class=panel-heading>
@@ -15,12 +20,10 @@ layout: default
   </div>
 
   <div class="panel-footer">
-    <span style="vertical-align:middle">
-      <a class="twitter-share-button" rel="canonical" href="https://twitter.com/intent/tweet?screen_name=RobBos81" data-size="large">Tweet to @RobBos81</a>
-    </span>
+
+    <a class="twitter-share-button" rel="canonical" href="https://twitter.com/intent/tweet?screen_name=RobBos81" data-size="large">Tweet to @RobBos81</a>
     
-    <span style="vertical-align:middle"> 
-      Tags: 
+    <span style="vertical-align:middle;"> Tags: 
       {% for tag in page.tags %}
         <span class="btn btn-default">
             <a class="post-link" href="{{ tag.url | prepend: site.baseurl }}">{{ tag }}</a>
