Twitter button has gone missing, might be because of styling?

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,6 @@
 ---
 layout: default
 ---
-<style>
-  .twitter-widget-0 {
-    vertical-align: middle;
-  }
-</style>
 
 <div class="panel panel-default">
   <div class=panel-heading>
@@ -59,3 +54,9 @@ twttr.widgets.createMentionButton(
   }
 );
 </script>
+
+<style>
+    #twitter-widget-0 {
+      vertical-align: middle;
+    }
+</style>
