--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -5,10 +5,10 @@ title: Robs - Blog - Tags
 
 <h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
 <ul class="posts">
-  {% for post in page.posts %}
+  {% for tag in tags %}
     <li>
       <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-      <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+      <a class="post-link" href="{{ tag.url | prepend: site.baseurl }}">{{ tag }}</a>
     </li>
   {% endfor %}
 </ul>
