--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -5,7 +5,7 @@ title: Robs - Blog - Tags
 
 <h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
 <ul class="posts">
-  {% for tag in tags %}
+  {% for tag in site.tags %}
     <li>
       <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
       <a class="post-link" href="{{ tag.url | prepend: site.baseurl }}">{{ tag }}</a>
@@ -14,6 +14,15 @@ title: Robs - Blog - Tags
 </ul>
 
 <hr/>
+
+<ul class="tags">
+    {% for post in site.posts %}
+      <li>
+          {% for tag in posts.tags %}
+        <a class="post-link" href="{{ tag.url | prepend: site.baseurl }}">{{ tag }}</a>
+      </li>
+    {% endfor %}
+  </ul>
 
 {% comment %}
 =======================
