--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,13 +17,16 @@ layout: default
   <div class="panel-footer">
       <a class="twitter-share-button" rel="canonical" href="https://twitter.com/intent/tweet?screen_name=RobBos81" data-size="large">Tweet to @RobBos81</a>
       
-      <span style="vertical-align:middle;"> Tags: 
-        {% for tag in page.tags %}
-          <span class="btn btn-default">
-              <a class="post-link" href="{{ tag.url | prepend: site.baseurl }}">{{ tag }}</a>
-          </span>
-        {% endfor %}
-      </span>
+      {% if page.tags.count != 0 %}
+        <span style="vertical-align:middle;"> Tags: 
+          {% for tag in page.tags %}
+            <span class="btn btn-default">
+                <a class="post-link" href="{{ tag.url | prepend: site.baseurl }}">{{ tag }}</a>
+            </span>
+          {% endfor %}
+        </span>
+      {% endif %}
+
    </div>
 
 </div>
