--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: Robs - Blog - Tags
+title: Tags
 ---
 
+<h1>{{ page.title }}</h1>
 <h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
 
   {% comment %}
