--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
   <div class="panel-footer">
       <a class="twitter-share-button" rel="canonical" href="https://twitter.com/intent/tweet?screen_name=RobBos81" data-size="large">Tweet to @RobBos81</a>
       
-      {% if page.tags == "" %}
+      {% if page.tags != [] %}
         <span style="vertical-align:middle;"> Tags: 
           {% for tag in page.tags %}
             <span class="btn btn-default">
