--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="{{ page.description }}">
 	<meta name="author" content="Rob Bos">
-	<!-- favicon
-	<link rel="shortcut icon" href="/img/favicon.png">
-	-->
+	<link rel="shortcut icon" type="image/png" href="/images/rob_pixel.png">
+	
 	<title>{{ page.title }}</title>
 	
 	<!-- jQuery -->
