adding xpirit image at the bottom of each post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,8 @@ layout: default
         </span>
       {% endif %}
 
+      <a href="https://www.xpirit.com/xpiriter/rob"><img src="/images/xpirit%20export%20blog.png" alt="Xpirit logo" height="100px" style="align-self: flex-end;" /></a>
+
    </div>
 
 </div>
