--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
         </span>
       {% endif %}
 
-      <a href="https://www.xpirit.com/xpiriter/rob"><img src="/images/xpirit%20export%20blog.png" alt="Xpirit logo" height="100px" style="align-self: flex-end;" /></a>
+      <a href="https://www.xpirit.com/xpiriter/rob"><img src="/images/xpirit_export_blog.png" alt="Xpirit logo" height="100px" style="align-self: flex-end;" /></a>
 
    </div>
 
