removed extra setting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ layout: default
     </div>
 
     <div class="logo">
-      <a href="https://www.xpirit.com/xpiriter/rob"><img src="/images/xpirit_export_blog.png" alt="Xpirit logo" height="100px" style="align-self: flex-end;" /></a>
+      <a href="https://www.xpirit.com/xpiriter/rob"><img src="/images/xpirit_export_blog.png" alt="Xpirit logo" style="align-self: flex-end;" /></a>
     </div>
    </div>
 
