--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,11 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="https://github.com/rajbos/" target="_blank">GitHub</a></li>						
-						<li><a href="https://twitter.com/robbos81/" target="_blank">Twitter</a></li> 											
-						<li><a href="{{ "/blog/tools" | absolute_url }}" target="_blank">Tools</a></li>     
-						<li><a href="{{ "/blog/atom.xml" | absolute_url }}" target="_blank">RSS</a></li>						
+						<li><a href="https://github.com/rajbos/" target="_blank">GitHub</a></li>
+						<li><a href="https://twitter.com/robbos81/" target="_blank">Twitter</a></li>
+						<li><a href="https://sessionize.com/RobBos/" target="_blank">Sessionize</a></li>
+						<li><a href="{{ "/blog/tools" | absolute_url }}" target="_blank">Tools</a></li>
+						<li><a href="{{ "/blog/atom.xml" | absolute_url }}" target="_blank">RSS</a></li>
 						<li><a href="https://mailchi.mp/a94a59145fe3/rajbos_github_io" target="_blank">Subscribe</a></li>
 						<li><a href="{{ "/blog/about" | absolute_url }}" target="_blank">About</a></li>
 					</ul>                    
