Updated old references and adding youtube link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 						<li><a href="https://github.com/rajbos/" target="_blank">GitHub</a></li>
 						<li><a href="https://twitter.com/robbos81/" target="_blank">Twitter</a></li>
 						<li><a href="https://sessionize.com/RobBos/" target="_blank">Sessionize</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLXVVwOM8uv2wQyhQ7mB_Nv_iXyMuXf-GT target="_blank">YouTube</a></li>
 						<li><a href="{{ "/blog/tools" | absolute_url }}" target="_blank">Tools</a></li>
 						<li><a href="{{ "/blog/atom.xml" | absolute_url }}" target="_blank">RSS</a></li>
 						<li><a href="https://mailchi.mp/a94a59145fe3/rajbos_github_io" target="_blank">Subscribe</a></li>
