--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="{{ page.description }}">
 	<meta name="author" content="Rob Bos">
+    <meta name="keywords" content="Azure DevOps, Azure, GitHub, GitHub Actions, Security, DevOps, C#, Development, CI, CD, CI/CD, Continuos Deployment, Continuos Integration, Continuos Improvement">
+    <meta name="robots" content="INDEX, FOLLOW">
+
 	<link rel="shortcut icon" type="image/png" href="/images/rob_pixel.png">
 	
 	<title>{{ page.title }}</title>
