Added plausible setup for tracking to test

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
 	<link rel="shortcut icon" type="image/png" href="/images/rob_pixel.png">
 	
 	<title>{{ page.title }}</title>
+
+	<script defer data-domain="devopsjournal.io" src="https://plausible.io/js/plausible.js"></script>
 	
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
