Updated description meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="{{ page.description }}">
+	<meta name="description" content="{{ page.title }}">
 	<meta name="author" content="Rob Bos">
     <meta name="keywords" content="Azure DevOps, Azure, GitHub, GitHub Actions, Security, DevOps, C#, Development, CI, CD, CI/CD, Continuos Deployment, Continuos Integration, Continuos Improvement">
     <meta name="robots" content="INDEX, FOLLOW">
