Including giscus on the posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,10 @@ layout: default
   </div>
 
   <div class="panel-footer">
+    {% include giscus.html %}
+  </div>
+
+  <div class="panel-footer">
     <div class="tweet">
       <a class="twitter-share-button" rel="canonical" href="https://twitter.com/intent/tweet?screen_name=RobBos81" data-size="large">Tweet to @RobBos81</a>
     </div>
