--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
     {{ content }}
   </div>
 
-  <div class="panel-footer">
+  <div class="panel-giscus">
     {% include giscus.html %}
   </div>
 
