--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,22 @@ layout: default
   </div>
 
   <div class="panel-body post" style="overflow-x:scroll">
+    
     {{ content }}
+
+    <br />
+    {% if page.tags != [] %}
+    <div id="tagList">      
+          <span style="vertical-align:middle;font-weight: 600;">Tags:
+          {% for tag in page.tags %}
+            <span class="btn btn-default">
+              <!--a class="post-link" href="{{ tag.url | prepend: site.baseurl }}">{{ tag }}</a-->
+              <a class="post-link">{{ tag }}</a>
+            </span>
+          {% endfor %}
+        </span>
+    </div>
+    {% endif %}
   </div>
 
   <div class="panel-giscus">
@@ -28,18 +43,6 @@ layout: default
           <path fill-rule="evenodd" d="M7.177 3.073L9.573.677A.25.25 0 0110 .854v4.792a.25.25 0 01-.427.177L7.177 3.427a.25.25 0 010-.354zM3.75 2.5a.75.75 0 100 1.5.75.75 0 000-1.5zm-2.25.75a2.25 2.25 0 113 2.122v5.256a2.251 2.251 0 11-1.5 0V5.372A2.25 2.25 0 011.5 3.25zM11 2.5h-1V4h1a1 1 0 011 1v5.628a2.251 2.251 0 101.5 0V5A2.5 2.5 0 0011 2.5zm1 10.25a.75.75 0 111.5 0 .75.75 0 01-1.5 0zM3.75 12a.75.75 0 100 1.5.75.75 0 000-1.5z"></path></svg>
         Make a contribution
       </a>
-    </div>
-
-    <div>
-      {% if page.tags == [] %}
-        <span style="vertical-align:middle;"> Tags: 
-          {% for tag in page.tags %}
-            <span class="btn btn-default">
-                <a class="post-link" href="{{ tag.url | prepend: site.baseurl }}">{{ tag }}</a>
-            </span>
-          {% endfor %}
-        </span>
-      {% endif %}
     </div>
 
     <div class="logo">
