Fix element width

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -101,8 +101,9 @@ twttr.widgets.createMentionButton(
       vertical-align: middle;
     }
   
-  .mast.top {
-    background-color: #292D37
+  .mast-top {
+    background-color: #292D37;
+    width: 159px;
       
       .img {
         border-style: unset;
