--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -103,11 +103,15 @@ twttr.widgets.createMentionButton(
   
   .mast-top {
     background-color: #292D37;
-    width: 159px;
+    width: 159px !important;
       
-      .img {
-        border-style: unset;
+      img {
+        border-style: dashed;
     }
+  }
+  
+  .mast-top img {
+    border-style: unset;
   }
   
   .mast-share {
