LinkedIn url updates

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,8 +36,8 @@ layout: default
   <div class="panel-footer">
     <!-- share on Mastodon -->
     <div class="mast-share mast-share-lg">
-      <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.absolute_url }}&title=${{ page.title }}&source=${{ absolute_url }}" onclick="window.open(this.href, 'Share to LinkedIn', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
-        <img src="http://chillyfacts.com/wp-content/uploads/2017/06/LinkedIN.gif" alt="" width="54" height="20" />
+      <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url }}&title=${{ page.title }}&source=${{ site.baseurl }}" onclick="window.open(this.href, 'Share to LinkedIn', 'left=200,top=200,width=500,height=500,toolbar=1,resizable=0'); return false;">
+        <img src="/images/Linkedin-Share-buttons.png" alt="LinkedIn Share button" />
       </a>
     </div>
     <!-- share on Mastodon -->
