--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,9 +35,9 @@ layout: default
 
   <div class="panel-footer">
     <!-- share on Mastodon -->
-    <div class="mast-share mast-share-lg">
+    <div class="linked-share">
       <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ baseurl }}/{{ page.url }}&title=${{ page.title }}&source=${{ site.baseurl }}" onclick="window.open(this.href, 'Share to LinkedIn', 'left=200,top=200,width=500,height=500,toolbar=1,resizable=0'); return false;">
-        <img src="/images/Linkedin-Share-buttons.png" alt="LinkedIn Share button" class="linkedin-share"/>
+        <img src="/images/Linkedin-Share-buttons.png" alt="LinkedIn Share button" class="linkedin-share-image"/>
       </a>
     </div>
     <!-- share on Mastodon -->
@@ -87,6 +87,10 @@ twttr.widgets.createMentionButton(
 
 <style>
     .linkedin-share {
+      margin-left: 16px;
+    } 
+
+    .linkedin-share-image{
       max-height: 49px;
     }
     #twitter-widget-0 {
