--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,17 +61,14 @@ layout: default
 
 <style>
     .linkedin-share {
-      margin-left: 22px;
       float: left;
-      width: 203px;
-      height: 28px;
       padding-left: 9px;
       padding-right: 9px;
       vertical-align: middle;
     } 
 
     .linkedin-share-image{
-      max-height: 49px;
+      max-height: 35px;
       border-style: none;
     }
     #twitter-widget-0 {
@@ -89,6 +86,7 @@ layout: default
       padding-left: 9px;
       padding-right: 9px;
       vertical-align: middle;
+      padding-top: 3px;
     }
   
   .mast-top {
