fix linkedin share url

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@ layout: default
   <div class="panel-footer">
     <!-- share on Mastodon -->
     <div class="linkedin-share">
-      <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | absolute_url }}/{{ page.url }}&title=${{ page.title }}&source=${{ page.url | absolute_url }}" onclick="window.open(this.href, 'Share to LinkedIn', 'left=200,top=200,width=500,height=500,toolbar=1,resizable=0'); return false;">
+      <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | absolute_url }}&title=${{ page.title }}&source=${{ page.url | absolute_url }}" onclick="window.open(this.href, 'Share to LinkedIn', 'left=200,top=200,width=500,height=500,toolbar=1,resizable=0'); return false;">
         <img src="/images/Linkedin-Share-buttons.png" alt="LinkedIn Share button" class="linkedin-share-image"/>
       </a>
     </div>
